@@ -57,8 +57,8 @@
 		<field
 			name="layout"
 			type="modulelayout"
-			label="JField_Alt_Layout_Label"
-			description="JField_Alt_Module_Layout_Desc" />
+			label="JFIELD_ALT_LAYOUT_LABEL"
+			description="JFIELD_ALT_MODULE_LAYOUT_DESC" />
 
 		<field
 			name="moduleclass_sfx"
@@ -74,7 +74,7 @@
 			label="MODULES_FIELD_CACHING_LABEL"
 			description="MODULES_FIELD_CACHING_DESC">
 			<option
-				value="0">No caching</option>
+				value="0">MODULES_FIELD_VALUE_NOCACHING</option>
 		</field>
 	</fields>
 </extension>
