@@ -50,8 +50,8 @@
 	</fields>
 	<fields group="advanced">
 		<field name="cache" type="list" default="0" label="Caching" description="Select whether to cache the content of this module">
-			<option value="1">Use global</option>
-			<option value="0">No caching</option>
+			<option value="1">USE_GLOBAL</option>
+			<option value="0">MODULES_FIELD_VALUE_NOCACHING</option>
 		</field>
 		<field name="cache_time" type="text" default="900" label="Cache Time" description="The time before the module is recached" />
 	</fields>
